Fri May 30 22:55:56 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.h:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:
        * tao/Storable_FlatFileStream.cpp:
          Fix for the corner case of a race between redundant naming
          servers sharing a storable context file.

Thu May 29 17:01:45 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/FT_Naming_Service/README:
          minor cleanup.

        * orbsvcs/orbsvcs/FT_Naming_Serv.mpc:
          added FT_Random files.

        * orbsvcs/orbsvcs/Naming/Bindings_Iterator_T.h:
        * orbsvcs/orbsvcs/Naming/Bindings_Iterator_T.cpp:
          removed the redundant and confusing lock reference passed separately
          through the constructor and replaced it with an accessor method on the
          context being iterated. This also was necessary by the change to RW
          locking for scalability improvement.

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Persistent_Naming_Context.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Random.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Random.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Storable_Naming_Context.cpp:
          Optimize the FT/LB performance by only taking a lock when necessary. The
          underling context object synchronizes access to the context map, and the
          Round Robin strategy object synchronizes access to the index. Added a
          Random strategy that does not need a lock.

        * orbsvcs/orbsvcs/Naming/Hash_Naming_Context.h:
        * orbsvcs/orbsvcs/Naming/Hash_Naming_Context.cpp:
        * orbsvcs/orbsvcs/Naming/Persistent_Naming_Context.cpp:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.h:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp: