@@ -1,3 +1,8 @@
+Thu Jun  5 06:36:27 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/PortableServer/Root_POA.h:
+          Fixed msvc14 warning
+
 Fri May 30 22:55:56 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.h:
